--- a/app/src/main/res/layout/fragment_pokemon_detail.xml
+++ b/app/src/main/res/layout/fragment_pokemon_detail.xml
@@ -7,6 +7,18 @@
     android:padding="16dp"
     tools:context=".ui.detail.PokemonDetailFragment">
 
+    <!-- TODO: Change Toolbar Color -->
+    <com.google.android.material.appbar.MaterialToolbar
+        android:id="@+id/detail_toolbar"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:background="@color/material_dynamic_primary40"
+        android:elevation="10dp"
+        android:theme="@style/ThemeOverlay.App.Toolbar"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
+
     <ProgressBar
         android:id="@+id/detail_loading_spinner"
         style="?android:attr/progressBarStyleLarge"
@@ -24,7 +36,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:visibility="invisible"
-        app:constraint_referenced_ids="detail_pokemon_image, detail_pokemon_name_text, types_label, detail_pokemon_types_text, stats_label, detail_pokemon_stats_text, height_label, detail_pokemon_height_text, weight_label, detail_pokemon_weight_text"
+        app:constraint_referenced_ids="detail_toolbar, detail_pokemon_image, detail_pokemon_name_text, types_label, detail_pokemon_types_text, stats_label, detail_pokemon_stats_text, height_label, detail_pokemon_height_text, weight_label, detail_pokemon_weight_text"
         tools:visibility="visible" />
 
     <ImageView
@@ -35,7 +47,7 @@
         android:contentDescription="@string/pokemon_sprite_image"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/detail_toolbar"
         tools:src="@tools:sample/avatars" />
 
     <TextView
