--- a/app/src/main/res/layout/fragment_pokemon_detail.xml
+++ b/app/src/main/res/layout/fragment_pokemon_detail.xml
@@ -150,10 +150,10 @@
 
 
     <Button
-        android:id="@+id/navigate_list_button"
+        android:id="@+id/catch_release_Button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Go to List"
+        tools:text="Catch / Release"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@+id/detail_pokemon_weight_text" />
