--- a/app/src/main/res/layout/fragment_pokemon_grid.xml
+++ b/app/src/main/res/layout/fragment_pokemon_grid.xml
@@ -10,7 +10,7 @@
         android:id="@+id/search_view"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="8dp"
+        android:layout_marginTop="80dp"
         android:iconifiedByDefault="false"
         android:queryHint="Search a Pokemon..."
         app:layout_constraintEnd_toEndOf="parent"
@@ -45,7 +45,8 @@
         android:id="@+id/caught_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        tools:text="Caught"
+        android:text="@string/caught_pokemon_button"
+        android:layout_margin="8dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintBottom_toBottomOf="parent" />
