--- a/app/src/main/res/layout/fragment_caught_list.xml
+++ b/app/src/main/res/layout/fragment_caught_list.xml
@@ -10,6 +10,7 @@
         android:id="@+id/caught_pokemon_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="64dp"
         android:clipToPadding="false"
         android:padding="4dp"
         app:layout_constraintBottom_toBottomOf="parent"
