--- a/app/src/main/res/layout/fragment_pokemon_detail.xml
+++ b/app/src/main/res/layout/fragment_pokemon_detail.xml
@@ -18,7 +18,7 @@
         android:id="@+id/pokemon_error_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_margin="16dp"
+        android:padding="@dimen/padding_large"
         android:gravity="center"
         android:text="@string/error_loading_details"
         android:textAppearance="?attr/textAppearanceBodyLarge"
@@ -49,8 +49,8 @@
 
     <androidx.constraintlayout.motion.widget.MotionLayout
         android:id="@+id/image_motion_layout"
-        android:layout_width="150dp"
-        android:layout_height="150dp"
+        android:layout_width="@dimen/detail_sprite"
+        android:layout_height="@dimen/detail_sprite"
         app:layoutDescription="@xml/fragment_pokemon_detail_scene"
         app:layout_constraintBottom_toTopOf="@id/center_guideline_horizontal"
         app:layout_constraintEnd_toEndOf="parent"
@@ -61,7 +61,7 @@
             android:layout_width="0dp"
             android:layout_height="0dp"
             android:contentDescription="@string/pokemon_sprite_image"
-            android:padding="16dp"
+            android:padding="@dimen/padding_large"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -75,9 +75,9 @@
         android:id="@+id/detail_pokemon_name_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="8dp"
-        android:paddingStart="16dp"
-        android:paddingEnd="16dp"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:paddingStart="@dimen/padding_large"
+        android:paddingEnd="@dimen/padding_large"
         android:textAppearance="?attr/textAppearanceHeadlineMedium"
         android:textStyle="bold"
         app:layout_constraintEnd_toEndOf="parent"
@@ -89,8 +89,8 @@
         android:id="@+id/types_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/margin_large"
+        android:layout_marginTop="@dimen/margin_large"
         android:text="@string/types_label"
         android:textAppearance="?attr/textAppearanceTitleMedium"
         app:layout_constraintStart_toStartOf="parent"
@@ -122,22 +122,35 @@
         android:id="@+id/detail_pokemon_stats_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="@dimen/margin_large"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:layout_marginEnd="@dimen/margin_large"
+        android:lineSpacingMultiplier="1.2"
+        android:textAppearance="?attr/textAppearanceBodyMedium"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/stats_label"
+        tools:text="HP: 35\nAttack: 55\nDefense: 40" />
+
+    <TextView
+        android:id="@+id/detail_pokemon_stats_secondary"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="@dimen/margin_large"
+        android:layout_marginTop="@dimen/margin_medium"
+        android:layout_marginEnd="@dimen/margin_large"
         android:lineSpacingMultiplier="1.2"
         android:textAppearance="?attr/textAppearanceBodyMedium"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintStart_toEndOf="@+id/detail_pokemon_stats_text"
         app:layout_constraintTop_toBottomOf="@id/stats_label"
-        tools:text="HP: 35\nAttack: 55\nDefense: 40\nSp. Atk: 50\nSp. Def: 50\nSpeed: 90" />
+        tools:text="Sp. Atk: 50\nSp. Def: 50\nSpeed: 90" />
 
     <TextView
         android:id="@+id/height_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="16dp"
+        android:layout_marginStart="@dimen/margin_large"
+        android:layout_marginTop="@dimen/margin_large"
         android:text="@string/height_label"
         android:textAppearance="?attr/textAppearanceTitleMedium"
         app:layout_constraintStart_toStartOf="parent"
@@ -147,30 +160,30 @@
         android:id="@+id/detail_pokemon_height_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="@dimen/margin_medium"
+        android:layout_marginEnd="@dimen/margin_large"
         android:textAppearance="?attr/textAppearanceBodyMedium"
         app:layout_constraintBaseline_toBaselineOf="@id/height_label"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toEndOf="@id/height_label" />
+        app:layout_constraintStart_toEndOf="@id/height_label"
+        app:layout_constraintTop_toBottomOf="@id/detail_pokemon_stats_text"/>
 
     <TextView
         android:id="@+id/weight_label"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
+        android:layout_marginStart="@dimen/margin_large"
+        android:layout_marginTop="@dimen/margin_large"
         android:text="@string/weight_label"
         android:textAppearance="?attr/textAppearanceTitleMedium"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/height_label" />
+        app:layout_constraintStart_toEndOf="@+id/detail_pokemon_height_text"
+        app:layout_constraintTop_toBottomOf="@id/detail_pokemon_stats_text" />
 
     <TextView
         android:id="@+id/detail_pokemon_weight_text"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginStart="@dimen/margin_medium"
+        android:layout_marginEnd="@dimen/margin_large"
         android:textAppearance="?attr/textAppearanceBodyMedium"
         app:layout_constraintBaseline_toBaselineOf="@id/weight_label"
         app:layout_constraintEnd_toEndOf="parent"
@@ -180,8 +193,8 @@
         android:id="@+id/catch_release_button"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="24dp"
-        android:layout_marginBottom="16dp"
+        android:layout_marginTop="@dimen/margin_large"
+        android:layout_marginBottom="@dimen/margin_large"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
