--- a/app/src/main/res/layout/fragment_caught_list.xml
+++ b/app/src/main/res/layout/fragment_caught_list.xml
@@ -2,6 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/caught_list_root_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".ui.caught.CaughtListFragment">
@@ -10,9 +11,9 @@
         android:id="@+id/caught_pokemon_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:layout_marginTop="64dp"
+        android:layout_marginTop="@dimen/toolbar_margin"
         android:clipToPadding="false"
-        android:padding="4dp"
+        android:padding="@dimen/padding_small"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
