--- a/app/src/main/res/layout/grid_item_pokemon.xml
+++ b/app/src/main/res/layout/grid_item_pokemon.xml
@@ -3,21 +3,22 @@
     xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/item_grid_root_layout"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:layout_margin="4dp"
-    app:cardCornerRadius="8dp"
-    app:cardElevation="2dp">
+    android:layout_margin="@dimen/margin_small"
+    app:cardCornerRadius="@dimen/corner_radius"
+    app:cardElevation="@dimen/elevation">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:padding="8dp">
+        android:padding="@dimen/padding_medium">
 
         <ImageView
             android:id="@+id/pokemon_sprite_image"
-            android:layout_width="96dp"
-            android:layout_height="96dp"
+            android:layout_width="@dimen/grid_item_sprite"
+            android:layout_height="@dimen/grid_item_sprite"
             android:contentDescription="@string/pokemon_sprite_image"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
@@ -28,7 +29,7 @@
             android:id="@+id/pokemon_name_text"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginTop="4dp"
+            android:layout_marginTop="@dimen/margin_small"
             android:gravity="center"
             android:textAppearance="?attr/textAppearanceBodyMedium"
             android:textStyle="bold"
