--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -2,4 +2,159 @@
 <resources>
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
+
+    <color name="md_theme_primary">#B90D21</color>
+    <color name="md_theme_onPrimary">#FFFFFF</color>
+    <color name="md_theme_primaryContainer">#DD2F36</color>
+    <color name="md_theme_onPrimaryContainer">#FFFBFF</color>
+    <color name="md_theme_secondary">#006495</color>
+    <color name="md_theme_onSecondary">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer">#27ACF9</color>
+    <color name="md_theme_onSecondaryContainer">#003D5E</color>
+    <color name="md_theme_tertiary">#316A39</color>
+    <color name="md_theme_onTertiary">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer">#6BA66E</color>
+    <color name="md_theme_onTertiaryContainer">#003911</color>
+    <color name="md_theme_error">#BA1A1A</color>
+    <color name="md_theme_onError">#FFFFFF</color>
+    <color name="md_theme_errorContainer">#FFDAD6</color>
+    <color name="md_theme_onErrorContainer">#93000A</color>
+    <color name="md_theme_background">#410005</color>
+    <color name="md_theme_onBackground">#FFF8F7</color>
+    <color name="md_theme_surface">#FCF8F8</color>
+    <color name="md_theme_onSurface">#1C1B1B</color>
+    <color name="md_theme_surfaceVariant">#EFDFDF</color>
+    <color name="md_theme_onSurfaceVariant">#4F4444</color>
+    <color name="md_theme_outline">#817474</color>
+    <color name="md_theme_outlineVariant">#D2C3C3</color>
+    <color name="md_theme_scrim">#000000</color>
+    <color name="md_theme_inverseSurface">#313030</color>
+    <color name="md_theme_inverseOnSurface">#F4F0EF</color>
+    <color name="md_theme_inversePrimary">#FFB3AE</color>
+    <color name="md_theme_primaryFixed">#FFDAD7</color>
+    <color name="md_theme_onPrimaryFixed">#410005</color>
+    <color name="md_theme_primaryFixedDim">#FFB3AE</color>
+    <color name="md_theme_onPrimaryFixedVariant">#930015</color>
+    <color name="md_theme_secondaryFixed">#CBE6FF</color>
+    <color name="md_theme_onSecondaryFixed">#001E31</color>
+    <color name="md_theme_secondaryFixedDim">#90CDFF</color>
+    <color name="md_theme_onSecondaryFixedVariant">#004B72</color>
+    <color name="md_theme_tertiaryFixed">#B3F2B3</color>
+    <color name="md_theme_onTertiaryFixed">#002107</color>
+    <color name="md_theme_tertiaryFixedDim">#98D599</color>
+    <color name="md_theme_onTertiaryFixedVariant">#175123</color>
+    <color name="md_theme_surfaceDim">#DDD9D9</color>
+    <color name="md_theme_surfaceBright">#FCF8F8</color>
+    <color name="md_theme_surfaceContainerLowest">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow">#F7F3F2</color>
+    <color name="md_theme_surfaceContainer">#F1EDEC</color>
+    <color name="md_theme_surfaceContainerHigh">#EBE7E7</color>
+    <color name="md_theme_surfaceContainerHighest">#E5E2E1</color>
+    <color name="md_theme_primary_mediumContrast">#73000E</color>
+    <color name="md_theme_onPrimary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_mediumContrast">#D22630</color>
+    <color name="md_theme_onPrimaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_mediumContrast">#003A59</color>
+    <color name="md_theme_onSecondary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_mediumContrast">#0073AC</color>
+    <color name="md_theme_onSecondaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_mediumContrast">#004014</color>
+    <color name="md_theme_onTertiary_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_mediumContrast">#407946</color>
+    <color name="md_theme_onTertiaryContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_error_mediumContrast">#740006</color>
+    <color name="md_theme_onError_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_mediumContrast">#CF2C27</color>
+    <color name="md_theme_onErrorContainer_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_background_mediumContrast">#FFF8F7</color>
+    <color name="md_theme_onBackground_mediumContrast">#281716</color>
+    <color name="md_theme_surface_mediumContrast">#FCF8F8</color>
+    <color name="md_theme_onSurface_mediumContrast">#111111</color>
+    <color name="md_theme_surfaceVariant_mediumContrast">#EFDFDF</color>
+    <color name="md_theme_onSurfaceVariant_mediumContrast">#3E3434</color>
+    <color name="md_theme_outline_mediumContrast">#5B5050</color>
+    <color name="md_theme_outlineVariant_mediumContrast">#766A6A</color>
+    <color name="md_theme_scrim_mediumContrast">#000000</color>
+    <color name="md_theme_inverseSurface_mediumContrast">#313030</color>
+    <color name="md_theme_inverseOnSurface_mediumContrast">#F4F0EF</color>
+    <color name="md_theme_inversePrimary_mediumContrast">#FFB3AE</color>
+    <color name="md_theme_primaryFixed_mediumContrast">#D22630</color>
+    <color name="md_theme_onPrimaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_mediumContrast">#AD001B</color>
+    <color name="md_theme_onPrimaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_mediumContrast">#0073AC</color>
+    <color name="md_theme_onSecondaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_mediumContrast">#005A87</color>
+    <color name="md_theme_onSecondaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_mediumContrast">#407946</color>
+    <color name="md_theme_onTertiaryFixed_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_mediumContrast">#276030</color>
+    <color name="md_theme_onTertiaryFixedVariant_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_mediumContrast">#C9C6C5</color>
+    <color name="md_theme_surfaceBright_mediumContrast">#FCF8F8</color>
+    <color name="md_theme_surfaceContainerLowest_mediumContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_mediumContrast">#F7F3F2</color>
+    <color name="md_theme_surfaceContainer_mediumContrast">#EBE7E7</color>
+    <color name="md_theme_surfaceContainerHigh_mediumContrast">#E0DCDB</color>
+    <color name="md_theme_surfaceContainerHighest_mediumContrast">#D4D1D0</color>
+    <color name="md_theme_primary_highContrast">#60000A</color>
+    <color name="md_theme_onPrimary_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryContainer_highContrast">#970016</color>
+    <color name="md_theme_onPrimaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondary_highContrast">#002F4A</color>
+    <color name="md_theme_onSecondary_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryContainer_highContrast">#004D75</color>
+    <color name="md_theme_onSecondaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiary_highContrast">#00340F</color>
+    <color name="md_theme_onTertiary_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryContainer_highContrast">#1A5425</color>
+    <color name="md_theme_onTertiaryContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_error_highContrast">#600004</color>
+    <color name="md_theme_onError_highContrast">#FFFFFF</color>
+    <color name="md_theme_errorContainer_highContrast">#98000A</color>
+    <color name="md_theme_onErrorContainer_highContrast">#FFFFFF</color>
+    <color name="md_theme_background_highContrast">#FFF8F7</color>
+    <color name="md_theme_onBackground_highContrast">#281716</color>
+    <color name="md_theme_surface_highContrast">#FCF8F8</color>
+    <color name="md_theme_onSurface_highContrast">#000000</color>
+    <color name="md_theme_surfaceVariant_highContrast">#EFDFDF</color>
+    <color name="md_theme_onSurfaceVariant_highContrast">#000000</color>
+    <color name="md_theme_outline_highContrast">#332A2A</color>
+    <color name="md_theme_outlineVariant_highContrast">#514747</color>
+    <color name="md_theme_scrim_highContrast">#000000</color>
+    <color name="md_theme_inverseSurface_highContrast">#313030</color>
+    <color name="md_theme_inverseOnSurface_highContrast">#FFFFFF</color>
+    <color name="md_theme_inversePrimary_highContrast">#FFB3AE</color>
+    <color name="md_theme_primaryFixed_highContrast">#970016</color>
+    <color name="md_theme_onPrimaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_primaryFixedDim_highContrast">#6D000D</color>
+    <color name="md_theme_onPrimaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixed_highContrast">#004D75</color>
+    <color name="md_theme_onSecondaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_secondaryFixedDim_highContrast">#003653</color>
+    <color name="md_theme_onSecondaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixed_highContrast">#1A5425</color>
+    <color name="md_theme_onTertiaryFixed_highContrast">#FFFFFF</color>
+    <color name="md_theme_tertiaryFixedDim_highContrast">#003C12</color>
+    <color name="md_theme_onTertiaryFixedVariant_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceDim_highContrast">#BBB8B8</color>
+    <color name="md_theme_surfaceBright_highContrast">#FCF8F8</color>
+    <color name="md_theme_surfaceContainerLowest_highContrast">#FFFFFF</color>
+    <color name="md_theme_surfaceContainerLow_highContrast">#F4F0EF</color>
+    <color name="md_theme_surfaceContainer_highContrast">#E5E2E1</color>
+    <color name="md_theme_surfaceContainerHigh_highContrast">#D7D4D3</color>
+    <color name="md_theme_surfaceContainerHighest_highContrast">#C9C6C5</color>
+    <color name="colorCustomColor1">#616200</color>
+    <color name="colorOnCustomColor1">#FFFFFF</color>
+    <color name="colorCustomColor1Container">#F4F655</color>
+    <color name="colorOnCustomColor1Container">#6F7000</color>
+    <color name="colorCustomColor1_mediumContrast">#383800</color>
+    <color name="colorOnCustomColor1_mediumContrast">#FFFFFF</color>
+    <color name="colorCustomColor1Container_mediumContrast">#707100</color>
+    <color name="colorOnCustomColor1Container_mediumContrast">#FFFFFF</color>
+    <color name="colorCustomColor1_highContrast">#2D2E00</color>
+    <color name="colorOnCustomColor1_highContrast">#FFFFFF</color>
+    <color name="colorCustomColor1Container_highContrast">#4B4C00</color>
+    <color name="colorOnCustomColor1Container_highContrast">#FFFFFF</color>
+
 </resources>
