Refactored code for final polish, added custom Material Theme, improved error handling, fixed minor bugs, added text styles

--- a/app/src/main/res/layout/grid_item_pokemon.xml
+++ b/app/src/main/res/layout/grid_item_pokemon.xml
@@ -31,8 +31,8 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_small"
             android:gravity="center"
-            android:textAppearance="?attr/textAppearanceBodyMedium"
-            android:textStyle="bold"
+            style="@style/PokemonNameStyle"
+            android:textSize="14sp"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
