--- a/app/src/main/res/layout/fragment_caught_list.xml
+++ b/app/src/main/res/layout/fragment_caught_list.xml
@@ -25,7 +25,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:text="@string/no_pokemon_caught"
-        android:textAppearance="?attr/textAppearanceBodyLarge"
+        style="@style/ErrorStyle"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
