--- a/app/src/main/res/layout/fragment_pokemon_grid.xml
+++ b/app/src/main/res/layout/fragment_pokemon_grid.xml
@@ -12,30 +12,29 @@
         android:id="@+id/search_view_card"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_margin="@dimen/margin_medium"
+        android:labelFor="@+id/search_view"
+        app:cardCornerRadius="32dp"
+        app:cardElevation="0dp"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:labelFor="@+id/search_view"
-        android:layout_margin="@dimen/margin_medium"
-        app:cardCornerRadius="32dp"
-        app:cardElevation="0dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.appcompat.widget.SearchView
             android:id="@+id/search_view"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:background="@color/white"
-            android:iconifiedByDefault="false"
-             />
+            android:iconifiedByDefault="false" />
     </com.google.android.material.card.MaterialCardView>
 
     <androidx.recyclerview.widget.RecyclerView
         android:id="@+id/pokemon_recycler_view"
         android:layout_width="0dp"
         android:layout_height="0dp"
+        android:layout_marginTop="@dimen/margin_small"
         android:clipToPadding="false"
         android:padding="@dimen/padding_small"
-        android:layout_marginTop="@dimen/margin_small"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -47,6 +46,8 @@
         style="?android:attr/progressBarStyleLarge"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:indeterminate="true"
+        android:indeterminateTint="@color/white"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
@@ -56,44 +57,39 @@
 
     <TextView
         android:id="@+id/search_empty_text"
+        style="@style/ErrorStyle"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_margin="@dimen/margin_large"
         android:gravity="center"
         android:text="@string/pokemon_not_found"
-        android:textAppearance="?attr/textAppearanceBodyLarge"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:visibility="gone"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/search_view_card" />
 
-    <LinearLayout
-        android:id="@+id/grid_error_view"
+    <TextView
+        android:id="@+id/grid_error_text"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:gravity="center_horizontal"
-        android:orientation="vertical"
-        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_margin="@dimen/margin_large"
+        android:gravity="center"
+        android:text="@string/error_loading_list"
+        android:padding="@dimen/padding_large"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent">
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        style="@style/ErrorStyle" />
 
-        <TextView
-            android:id="@+id/grid_error_text"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:layout_margin="@dimen/margin_large"
-            android:gravity="center"
-            android:text="@string/error_loading_list"
-            android:textAppearance="?attr/textAppearanceBodyLarge"
-            android:textColor="?attr/colorError" />
-
-        <Button
-            android:id="@+id/grid_retry_button"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="@string/retry" />
-    </LinearLayout>
+    <Button
+        android:id="@+id/grid_retry_button"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:text="@string/retry"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/grid_error_text"/>
 
     <Button
         android:id="@+id/caught_button"
@@ -103,7 +99,9 @@
         android:layout_marginStart="@dimen/margin_large"
         android:layout_marginEnd="@dimen/margin_large"
         android:layout_marginBottom="@dimen/margin_medium"
+        android:backgroundTint="@color/md_theme_tertiary"
         android:text="@string/caught_pokemon_button"
+        android:textColor="@color/white"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
