--- a/app/src/main/res/layout/list_item_caught_pokemon.xml
+++ b/app/src/main/res/layout/list_item_caught_pokemon.xml
@@ -31,13 +31,28 @@
             android:layout_width="0dp"
             android:layout_height="wrap_content"
             android:padding="@dimen/padding_small"
-            android:textAppearance="?attr/textAppearanceBodyMedium"
-            android:textStyle="bold"
+            style="@style/PokemonNameStyle"
+            android:textSize="18sp"
+            android:layout_marginStart="@dimen/margin_small"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintEnd_toStartOf="@+id/release_button"
             app:layout_constraintStart_toEndOf="@id/caught_pokemon_sprite_image"
             app:layout_constraintTop_toTopOf="@id/caught_pokemon_sprite_image"
             tools:text="Pikachu" />
+
+        <Button
+            android:id="@+id/release_button"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/margin_large"
+            android:layout_marginBottom="@dimen/margin_large"
+            android:layout_marginEnd="@dimen/margin_large"
+            android:text="@string/release_pokemon"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintStart_toEndOf="@+id/caught_pokemon_name_text"
+            app:layout_constraintVertical_bias="0.0"
+            tools:text="Release" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 </com.google.android.material.card.MaterialCardView>
