--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,4 +12,7 @@
     <dimen name="caught_list_sprite">80dp</dimen>
     <dimen name="grid_item_sprite">96dp</dimen>
     <dimen name="detail_sprite">150dp</dimen>
+    <dimen name="text_size_headline">28sp</dimen>
+    <dimen name="text_size_title">16sp</dimen>
+    <dimen name="text_size_body">14sp</dimen>
 </resources>
