--- a/app/src/main/res/layout/fragment_pokemon_detail.xml
+++ b/app/src/main/res/layout/fragment_pokemon_detail.xml
@@ -46,7 +46,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:indeterminate="true"
-            android:indeterminateTint="@color/white"
+            android:indeterminateTint="@color/text_light"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -112,7 +112,7 @@
             android:layout_height="wrap_content"
             android:layout_marginTop="@dimen/margin_large"
             android:paddingTop="12dp"
-            android:textColor="@color/black"
+            android:textColor="@color/text_dark"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="@+id/detail_pokemon_name_text" />
@@ -139,7 +139,7 @@
             android:background="@drawable/rounded_shape"
             android:lineSpacingMultiplier="1.2"
             android:padding="@dimen/padding_medium"
-            android:textColor="@color/black"
+            android:textColor="@color/text_dark"
             app:layout_constraintEnd_toStartOf="@+id/detail_pokemon_stats_secondary"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
@@ -157,7 +157,7 @@
             android:background="@drawable/rounded_shape"
             android:lineSpacingMultiplier="1.2"
             android:padding="@dimen/padding_medium"
-            android:textColor="@color/black"
+            android:textColor="@color/text_dark"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toEndOf="@+id/detail_pokemon_stats_text"
