--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="black">#FF000000</color>
-    <color name="white">#FFFFFFFF</color>
+    <color name="text_dark">#FF000000</color>
+    <color name="text_light">#FFFFFFFF</color>
 
     <color name="md_theme_primary">#B90D21</color>
     <color name="md_theme_onPrimary">#FFFFFF</color>
