--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -3,8 +3,8 @@
     <style name="Theme.Pokedex" parent="Base.Theme.Pokedex" />
 
     <style name="ThemeOverlay.App.Toolbar" parent="ThemeOverlay.MaterialComponents.Toolbar.Primary">
-        <item name="colorControlNormal">@color/white</item>
-        <item name="android:textColorPrimary">@color/white</item>
+        <item name="colorControlNormal">@color/text_light</item>
+        <item name="android:textColorPrimary">@color/text_light</item>
     </style>
 
     <style name="Base.Theme.Pokedex" parent="Theme.Material3.Light.NoActionBar">
